CrashGCForDumpingJavaThread do not trigger expected crash build with clang17

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 25
    • Affects Version/s: 21, 25
    • Component/s: hotspot
    • b05
    • generic
    • generic

      Test runtime/ErrorHandling/TestDwarf.java fails when tested jdk build by clang17 with fastdebug configure.

      Test log snippet:
      Command line: [/tmp/tone/run/jtreg/jdk-repo/build/linux-x86_64-server-fastdebug/images/jdk/bin/java -cp /tmp/tone/run/jtreg/jt-work/jtreg/hotspot_jtreg/classes/25/runtime/ErrorHandling/TestDwarf.d:/tmp/tone/run/jtreg/jdk-repo/test/hotspot/jtreg/runtime/ErrorHandling:/tmp/tone/run/jtreg/jt-work/jtreg/hotspot_jtreg/classes/25:/tmp/tone/run/jtreg/jdk-repo/test/hotspot/jtreg:/tmp/tone/run/jtreg/jt-work/jtreg/hotspot_jtreg/classes/25/test/lib:/tmp/tone/run/jtreg/jdk-repo/test/lib:/tmp/tone/run/jtreg/jtreg/lib/javatest.jar:/tmp/tone/run/jtreg/jtreg/lib/jtreg.jar -ea -esa -XX:TraceDwarfLevel=2 -XX:-CreateCoredumpOnCrash -XX:+CrashGCForDumpingJavaThread --version ]
      [2024-12-12T15:03:19.323585907Z] Gathering output for process 905538
      [2024-12-12T15:03:19.324347698Z] Waiting for completion for process 905538
      [2024-12-12T15:03:19.486131773Z] Waiting for completion finished for process 905538
      Output and diagnostic info for process 905538 was saved into 'pid-905538-output.log'
      STDERR:
      WARNING: A restricted method in java.lang.System has been called
      WARNING: java.lang.System::loadLibrary has been called by TestDwarf in an unnamed module (file:/tmp/tone/run/jtreg/jt-work/jtreg/hotspot_jtreg/classes/25/runtime/ErrorHandling/TestDwarf.d/)
      WARNING: Use --enable-native-access=ALL-UNNAMED to avoid a warning for callers in this module
      WARNING: Restricted methods will be blocked in a future release unless native access is enabled

      java.lang.RuntimeException: Crash JVM should not exit gracefully: expected 0 to not equal 0
      at jdk.test.lib.Asserts.fail(Asserts.java:691)
      at jdk.test.lib.Asserts.assertNotEquals(Asserts.java:451)
      at TestDwarf.runAndCheck(TestDwarf.java:131)
      at TestDwarf.test(TestDwarf.java:103)
      at TestDwarf.main(TestDwarf.java:91)

      Configure command:
      bash configure --with-jobs=64 --prefix=/tmp/tone/run/jtreg/jdk-repo/install-fastdebug --verbose --with-debug-level=fastdebug --enable-unlimited-crypto --with-jvm-variants=server --with-boot-jdk=/tmp/tone/run/jtreg/binary-download/jdk-binary --with-gtest=/tmp/tone/run/jtreg/googletest-v1.14.x --with-jtreg=/tmp/tone/run/jtreg/jtreg --with-jmh=build/jmh/jars --with-version-opt=f71d5150 --with-zlib=system --enable-ccache --with-native-debug-symbols=external --with-toolchain-type=clang --with-toolchain-path=/tmp/tone/run/jtreg/clang-toolchain/aarch64/bin

            Assignee:
            Sendao Yan
            Reporter:
            Sendao Yan
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: