8346193: Test runtime/ErrorHandling/TestDwarf.java fails build with clang17